--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/views/home.html
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/views/home.html
@@ -3,7 +3,7 @@
 		<strong class="am-text-primary am-text-lg">zuul动态路由配置管理</strong> / <small>首页</small>
 	</div>
 </div>
-<ul class="am-avg-sm-1 am-avg-md-3 am-margin-xs am-padding-xs am-text-center admin-content-list ">
+<ul class="am-avg-sm-1 am-avg-md-6 am-margin-xs am-padding-xs am-text-center admin-content-list ">
 	<li>
 		<a href="javascript:void(0);" class="am-text-success">
 			<span class="am-icon-btn am-icon-user"></span><br />
@@ -23,6 +23,27 @@
 			<span class="am-icon-btn am-icon-recycle"></span><br />
 			ZK路由配置总数<br />
 			<span id="zk" class="countView"></span>
+		</a>
+	</li>
+	<li>
+		<a href="javascript:void(0);" class="am-text-success">
+			<span class="am-icon-btn am-icon-user"></span><br />
+			DB路由规则总数<br />
+			<span id="dbRule" class="countView"></span>
+		</a>
+	</li>
+	<li>
+		<a href="javascript:void(0);" class="am-text-warning">
+			<span class="am-icon-btn am-icon-briefcase"></span><br />
+			REDIS路由规则总数<br />
+			<span id="redisRule" class="countView"></span>
+		</a>
+	</li>
+	<li>
+		<a href="javascript:void(0);" class="am-text-danger">
+			<span class="am-icon-btn am-icon-recycle"></span><br />
+			ZK路由规则总数<br />
+			<span id="zkRule" class="countView"></span>
 		</a>
 	</li>
 </ul>
