--- a/itopener-parent/tools-parent/tools-eureka-admin-parent/tools-eureka-admin-view/src/main/resources/static/views/home.html
+++ b/itopener-parent/tools-parent/tools-eureka-admin-parent/tools-eureka-admin-view/src/main/resources/static/views/home.html
@@ -3,7 +3,7 @@
 		<strong class="am-text-primary am-text-lg">eureka注册中心服务管理</strong> / <small>首页</small>
 	</div>
 </div>
-<ul class="am-avg-sm-1 am-avg-md-2 am-margin-xs am-padding-xs am-text-center admin-content-list ">
+<ul class="am-avg-sm-1 am-avg-md-3 am-margin-xs am-padding-xs am-text-center admin-content-list ">
 	<li>
 		<a href="javascript:void(0);" class="am-text-success">
 			<span class="am-icon-btn am-icon-user"></span><br />
@@ -16,6 +16,13 @@
 			<span class="am-icon-btn am-icon-briefcase"></span><br />
 			节点总数<br />
 			<span id="nodeCount" class="countView"></span>
+		</a>
+	</li>
+	<li>
+		<a href="javascript:void(0);" class="am-text-secondary">
+			<span class="am-icon-btn am-icon-recycle"></span><br />
+			可用节点数<br />
+			<span id="enableNodeCount" class="countView"></span>
 		</a>
 	</li>
 </ul>
