增加keys正则的查询

--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/clients.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/clients.html
@@ -15,7 +15,7 @@
 		</li>
 	</ul>
 </form>
-<hr class="am-margin-top-0"/>
+<hr class="am-margin-xs"/>
 <div class="am-scrollable-horizontal">
 	<table class="am-table am-table-bordered am-table-striped am-table-hover am-table-compact am-text-nowrap am-table-centered am-margin-bottom-xs">
 		<thead>
