--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/info.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/info.html
@@ -15,7 +15,7 @@
 		</li>
 	</ul>
 </form>
-<hr class="am-margin-top-0"/>
+<hr class="am-margin-xs"/>
 <div class="am-g">
 	<ul class="am-avg-sm-1 am-avg-md-1 am-avg-lg-1 am-thumbnails" id="infoContent">
 	
