--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/redisindex.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/redisindex.html
@@ -79,9 +79,13 @@
 			icon: 'fa-tachometer',
 			url: 'views/home.html'
 		},{
-			name: 'key-value',
+			name: 'key查询',
 			icon: 'fa-tachometer',
 			url: 'views/keys.html'
+		},{
+			name: 'key-value',
+			icon: 'fa-tachometer',
+			url: 'views/keyvalues.html'
 		},{
 			name: '客户端',
 			icon: 'fa-tachometer',
