--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/keyvalues.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/keyvalues.html
@@ -3,6 +3,9 @@
 		<strong class="am-text-primary am-text-lg">redis管理工具</strong> / <small>key-value</small>
 	</div>
 	<div class="am-fr am-cf">
+		<button type="button" class="am-btn am-btn-sm am-btn-primary" id="showAllKeysBtn">
+			<i class="am-icon-refresh"></i>&nbsp;显示所有key
+		</button>
 		<button type="button" class="am-btn am-btn-sm am-btn-primary" data-am-modal="{target: '#editModal'}">
 			<i class="am-icon-plus"></i>&nbsp;新增
 		</button>
@@ -101,7 +104,7 @@
 </div>
 <script>
 (function(){
-	$(function(){
+	$('#showAllKeysBtn').on('click', function(){
 		$.ajax({
 			url: basePath + 'redis/allkeys',
 			type: 'get',
