修复刷新所有key value时重复显示的问题

--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/keyvalues.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/keyvalues.html
@@ -105,6 +105,9 @@
 <script>
 (function(){
 	$('#showAllKeysBtn').on('click', function(){
+		keys = [];
+		keysIndex = 0;
+		$('#tableBody').empty();
 		$.ajax({
 			url: basePath + 'redis/allkeys',
 			type: 'get',
