修改页面操作按钮的大小为xs

--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/cluster.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/cluster.html
@@ -3,7 +3,7 @@
 		<strong class="am-text-primary am-text-lg">redis管理工具</strong> / <small>集群关系</small>
 	</div>
 	<div class="am-fr am-cf">
-		<button type="button" class="am-btn am-btn-sm am-btn-primary" id="refreshBtn">
+		<button type="button" class="am-btn am-btn-xs am-btn-primary" id="refreshBtn">
 			<i class="am-icon-refresh"></i>&nbsp;刷新
 		</button>
 	</div>
