--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/keyvalues.html
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis-view/src/main/resources/static/views/keyvalues.html
@@ -3,10 +3,10 @@
 		<strong class="am-text-primary am-text-lg">redis管理工具</strong> / <small>key-value</small>
 	</div>
 	<div class="am-fr am-cf">
-		<button type="button" class="am-btn am-btn-sm am-btn-primary" id="showAllKeysBtn">
+		<button type="button" class="am-btn am-btn-xs am-btn-primary" id="showAllKeysBtn">
 			<i class="am-icon-refresh"></i>&nbsp;显示所有key
 		</button>
-		<button type="button" class="am-btn am-btn-sm am-btn-primary" data-am-modal="{target: '#editModal'}">
+		<button type="button" class="am-btn am-btn-xs am-btn-primary" data-am-modal="{target: '#editModal'}">
 			<i class="am-icon-plus"></i>&nbsp;新增
 		</button>
 	</div>
